@@ -16,6 +16,7 @@ Version 0.3n
 * Added partial repeat date scenes for Miranda (mostly talk atm).
 * Naga mob (no content yet) + Naga transformative item.
 * Added Naga TF item to Rosalin's menu.
+* Added Dog TF item to Rosalin's menu.
 
 --------------------------------------------
              PREVIOUS VERSIONS
